# AuroraEngine

./: .gitignore  Untitled Diagram.drawio
dev/: to do code.txt
dev/CompiledShader/: VulkanSample_vert.spv
source/: CMakelists.txt
source/GaEngine/: AABB.cpp  AABB.h  AurMath.h  Camera.cpp  Camera.h  CmdSystem.cpp  CmdSystem.h  Color.h  Console.cpp  Console.h  Controller.cpp  Controller.h  DebugDraw.cpp  DebugDraw.h  DeviceWindow.h  Engine.h  Entity.cpp  Entity.h  FileSystem.cpp  FileSystem.h  Geometry.cpp  Geometry.h  HelperRenderer.cpp  HelperRenderer.h  Input.cpp  Light.cpp  Light.h  LightNode.cpp  LightNode.h  Log.cpp  Log.h  MaterialInstance.cpp  MathFunction.h  Mesh.h  Model.cpp  Model.h  OcclusionQuery.h  Pipeline.cpp  Pipeline.h  Platform.h  (+33 more)
source/depleted/: CalcShadow.fx  DirectionalLight.tpl  GaAttachable.h  GaMaterial.cpp  GaMaterialLibrary.cpp  GaPrimitiveNode.cpp  GaRendererDX9.cpp  GaRendererDX9.h  GaResourceFactory.cpp  GaScene.cpp  GaScene.h  MemoryTest.cpp  PointLight.tpl  RendererDX10.cpp  ScreenSpaceShadow.tpl  ShadowStrategyX52.cpp  ShadowStrategyX52.h  SpotLight.tpl  aaa.mtl  loader_ase_collada.txt  prelighting.fx  readfbx.cpp  render.txt
source/engine/: AABB.cpp  AABB.h  Animation.cpp  Animation.h  Application.cpp  Application.h  AurMath.h  ByteStream.h  CGeometry.cpp  CGeometry.h  Camera.cpp  Camera.h  CmdSystem.cpp  Color.h  Config.cpp  Config.h  Console.cpp  Controller.cpp  (+68 more)
tools/: CMakeSettings.json  CMakelists.txt  CompileShader.bat  MathVisualize.py  gen_project.bat
tools/androidTest/: CMakeLists.txt  android-build.bat  testcpp11.cpp
(+158 files in other folders)
